# rko_lio_localization

./: .cmake-format.yaml  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  compose.yaml  ros_noetic.Dockerfile  run.sh
cmake/: StandardProjectOptions.cmake  dependencies.cmake
cmake/dependencies/bonxai/: bonxai.cmake
cmake/dependencies/eigen/: eigen.cmake
cmake/dependencies/json/: nlohmann_json.cmake
cmake/dependencies/pb_utils/: pb_utils.cmake
cmake/dependencies/sophus/: sophus.cmake
cmake/dependencies/tbb/: tbb.cmake
cpp/: CMakeLists.txt
cpp/rko_lio/: CMakeLists.txt  lio.cpp  lio.hpp  sparse_voxel_grid.cpp  sparse_voxel_grid.hpp  util.hpp  voxel_down_sample.cpp  voxel_down_sample.hpp
cpp/rko_lio/core/: CMakeLists.txt  global_map_matcher.cpp  global_map_matcher.hpp  lio.cpp  lio.hpp
python/: Makefile  pyproject.toml  rko_lio.rbl
python/config/: helipr_aeva.yaml  helipr_avia.yaml
python/pybind/: CMakeLists.txt  helipr_file_reader_pybind.cpp  read_timestamps.cpp  read_timestamps.hpp  rko_lio_pybind.cpp
python/rko_lio/: cli.py  lio.py  lio_pipeline.py  scoped_profiler.py
python/rko_lio/dataloaders/: __init__.py  get_dataloader.py  helipr.py  raw.py  rosbag.py
ros/: CMakeLists.txt  package.xml
ros/config/: digiforests.yaml  ipb_car.yaml  leg_kilo.yaml  oxford_spires.yaml  plot_juggler.xml  ros1.rviz  ros1_ipb_car.yaml
ros/launch/: odometry.launch.py  offline.launch  online.launch
ros/rko_lio/: node.cpp  node.hpp
ros/rko_lio/ros1/: CMakeLists.txt  node.cpp  node.hpp  offline_node.cpp  online_node.cpp
ros/rko_lio/ros2/: CMakeLists.txt  attitude_filter.cpp  node.cpp  node.hpp  offline_node.cpp  online_node.cpp  velocity_filter.cpp
ros/rko_lio_ros_utils/ros1/rko_lio_ros_utils/: CMakeLists.txt  aliases.hpp  bufferable_bag.cpp  bufferable_bag.hpp  point_cloud_read.cpp  point_cloud_read.hpp  point_cloud_write.cpp  point_cloud_write.hpp  rko_lio_ros_utils.hpp  ros_vectors.hpp  time.hpp  transforms.hpp
ros/rko_lio_ros_utils/ros2/rko_lio_ros_utils/: CMakeLists.txt  aliases.hpp  point_cloud_read.cpp  point_cloud_read.hpp  point_cloud_write.cpp  point_cloud_write.hpp  rko_lio_ros_utils.hpp  ros_vectors.hpp  rosbag_utils.cpp  rosbag_utils.hpp  time.hpp  transforms.hpp
